--- a/ertaga.html
+++ b/ertaga.html
@@ -1,104 +1,128 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PROSTAFF — Ertaga ishchi</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>PROSTAFF — Ertaga uchun buyurtma</title>
+<meta name="theme-color" content="#0b1430">
+<style>
+  :root{--bg-1:#0b1430;--bg-2:#3a1d87;--text:#e9f1ff;--muted:#b7c3d7;--b:#2b396e;--shadow:0 10px 30px rgba(0,0,0,.35)}
+  *{box-sizing:border-box} html,body{height:100%}
+  body{
+    margin:0;color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+    background:
+      radial-gradient(1200px 1200px at 80% -10%, #5f32ff22, transparent 60%),
+      radial-gradient(900px 900px at 0% 0%, #00d4ff22, transparent 60%),
+      linear-gradient(160deg,var(--bg-1) 0%,#121b46 45%,var(--bg-2) 100%);
+  }
+  .wrap{max-width:980px;margin-inline:auto;padding:clamp(16px,3vw,28px)}
+  .topbar{display:flex;align-items:center;justify-content:space-between;gap:14px}
+  .brand{display:flex;align-items:center;gap:12px;font-weight:800;font-size:clamp(20px,4.5vw,26px)}
+  .logo{width:44px;height:44px;border-radius:12px;display:grid;place-items:center;
+        background:linear-gradient(135deg,#24c8ff,#3a71ff 55%,#7d5bff);box-shadow:var(--shadow)}
+  .actions{display:flex;gap:10px}
+  .iconbtn{width:44px;height:44px;border-radius:14px;display:grid;place-items:center;background:linear-gradient(180deg,#1a2553,#0e1536);border:1px solid #2a356d;color:#e7efff;text-decoration:none}
+  .iconbtn svg{width:22px;height:22px}
+  .hero{margin-top:10px;background:linear-gradient(180deg,#0e1b45,#171f4e 70%,#1f2158);border:1px solid #2f3a78;border-radius:26px;padding:clamp(18px,4vw,26px);box-shadow:var(--shadow)}
+  h1{margin:0 0 8px;font-weight:900;font-size:clamp(24px,6vw,36px)} .subtitle{margin:0 0 16px;color:var(--muted)}
+  form{display:grid;gap:14px} .row{display:grid;gap:12px;grid-template-columns:1fr 1fr} @media(max-width:780px){.row{grid-template-columns:1fr}}
+  label{font-weight:700;margin-bottom:6px;display:block}
+  .field{background:linear-gradient(180deg,#101a4b,#0e1536);border:1px solid var(--b);border-radius:16px;padding:12px 14px;color:var(--text);width:100%}
+  textarea.field{min-height:120px;resize:vertical}
+  .btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;border-radius:16px;padding:12px 16px;font-weight:800;text-decoration:none;cursor:pointer;border:1px solid #2b3b82;color:white;box-shadow:var(--shadow);background:linear-gradient(160deg,#6aa1ff,#2b56ff 60%,#1f3bff)}
+  .btn.alt{background:linear-gradient(160deg,#ffcf4d,#ff9a03);border-color:#8e5a00;color:#1d1400}
+  .btn.ghost{background:linear-gradient(180deg,#121a45,#0d1436);border-color:#2b396e}
+  .small{color:var(--muted);font-size:13px}
+</style>
 </head>
-<body class="page page--form">
+<body>
+<div class="wrap">
   <header class="topbar">
-    <a class="pill" href="index.html">←</a>
-    <div class="brand"><span class="badge">P</span><span class="brand__name">PROSTAFF</span></div>
-    <div class="lang">
-      <button class="pill" data-lang="uz">UZ</button>
-      <button class="pill" data-lang="ru">RU</button>
-      <button class="pill" data-lang="en">EN</button>
-    </div>
+    <div class="brand"><div class="logo">P</div> PROSTAFF</div>
+    <nav class="actions">
+      <a class="iconbtn" href="index.html" title="Bosh sahifa">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><path d="M3 12 12 3l9 9"/><path d="M9 21V9h6v12"/></svg>
+      </a>
+      <a class="iconbtn" href="tarix.html" title="Tarix">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="9"/><path d="M12 7v6l4 2"/></svg>
+      </a>
+    </nav>
   </header>
 
-  <main class="container">
-    <h2 class="page-title" data-i18n="tomorrow.title">Ertaga — ishchi bron qilish</h2>
+  <section class="hero">
+    <h1>Ertaga — ishchi buyurtmasi</h1>
+    <p class="subtitle">Ertangi sana uchun qulay forma.</p>
 
-    <form id="orderForm" class="card form">
-      <div class="grid-2">
-        <label class="fld">
-          <span data-i18n="form.service">Xizmat turi</span>
-          <select name="service" required>
-            <option value="clean" data-i18n="services.clean">Tozalash</option>
-            <option value="repair" data-i18n="services.repair">Ta’mirlash</option>
-            <option value="move" data-i18n="services.move">Ko‘chirish</option>
-            <option value="garden" data-i18n="services.garden">Bog‘</option>
+    <form id="tomorrowForm">
+      <div class="row">
+        <div>
+          <label for="type">Xizmat turi</label>
+          <select id="type" class="field">
+            <option>Tozalash</option><option>Usta</option><option>Ko‘chirish</option><option>Bog‘</option>
           </select>
-        </label>
-        <label class="fld">
-          <span data-i18n="form.people">Necha kishi</span>
-          <div class="counter">
-            <button type="button" class="ctr ctr--dec">−</button>
-            <input type="number" name="count" min="1" value="2" required />
-            <button type="button" class="ctr ctr--inc">+</button>
-          </div>
-        </label>
-      </div>
-
-      <div class="grid-3">
-        <label class="fld">
-          <span data-i18n="form.city">Shahar</span>
-          <input name="city" placeholder="Toshkent" required />
-        </label>
-        <label class="fld">
-          <span data-i18n="form.date">Sana</span>
-          <input type="date" name="date" required />
-        </label>
-        <label class="fld">
-          <span data-i18n="form.time">Soat</span>
-          <input type="time" name="time" required />
-        </label>
-      </div>
-
-      <div class="grid-2">
-        <label class="fld">
-          <span data-i18n="form.address">Manzil (aniq joy)</span>
-          <input name="address" placeholder="Yunusobod, 15-kvartal..." required />
-          <small id="gpsText">GPS: —</small>
-        </label>
-
-        <div class="fld">
-          <span data-i18n="form.gps">GPS</span>
-          <button type="button" id="gpsBtn" class="btn btn--line" data-i18n="form.getGps">GPS ni olish</button>
-          <input type="hidden" name="lat" /><input type="hidden" name="lng" />
-          <small data-i18n="form.gpsHint">Joylashuv ingl. brauzer ruxsati talab etiladi.</small>
+        </div>
+        <div>
+          <label for="count">Necha kishi</label>
+          <input id="count" class="field" type="number" value="1" min="1" max="20">
         </div>
       </div>
 
-      <div class="grid-1">
-        <label class="fld">
-          <span data-i18n="form.desc">Ish haqida ma’lumot</span>
-          <textarea name="desc" rows="4" placeholder="Kerakli materiallar, lift bor-yo‘qligi, maydon va h.k."></textarea>
-        </label>
+      <div class="row">
+        <div>
+          <label for="date">Sana</label>
+          <input id="date" class="field" type="date">
+        </div>
+        <div>
+          <label for="time">Vaqt</label>
+          <input id="time" class="field" type="time" value="09:00">
+        </div>
       </div>
 
-      <div class="grid-1">
-        <label class="fld">
-          <span data-i18n="form.photos">Rasm(lar) (ixtiyoriy)</span>
-          <input type="file" name="photos" id="photos" accept="image/*" multiple />
-          <div id="preview" class="preview"></div>
-        </label>
+      <div class="row">
+        <div>
+          <label for="city">Shahar</label>
+          <select id="city" class="field">
+            <option>Toshkent</option><option>Andijon</option><option>Farg‘ona</option>
+            <option>Namangan</option><option>Buxoro</option><option>Samarqand</option>
+          </select>
+        </div>
+        <div>
+          <label for="address">Manzil</label>
+          <input id="address" class="field" placeholder="Aniq manzil / landmark">
+        </div>
       </div>
 
-      <div class="form__actions">
-        <button class="btn btn--primary" type="submit" data-i18n="form.publish">E’lonni yuborish</button>
-        <a class="btn" href="bugun.html" data-i18n="tomorrow.switchToday">Bugun uchun →</a>
+      <div>
+        <label for="desc">Ish haqida ma’lumot</label>
+        <textarea id="desc" class="field" placeholder="Qisqa, aniq va kerakli tafsilotlar..."></textarea>
+      </div>
+
+      <div class="row">
+        <div>
+          <label for="files">Rasm(lar) (ixtiyoriy)</label>
+          <input id="files" class="field" type="file" accept="image/*" multiple>
+          <p class="small">8 ta, har biri ≤ 5MB</p>
+        </div>
+        <div>
+          <label>&nbsp;</label>
+          <a class="btn ghost" href="bugun.html">← Bugunga qaytish</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <button class="btn alt" type="button" onclick="submitTomorrow()">E’lonni yuborish</button>
+        <a class="btn" href="index.html">Bosh sahifa</a>
       </div>
     </form>
-  </main>
+  </section>
+</div>
 
-  <footer class="tabbar">
-    <a class="tab" href="index.html">🏠<span data-i18n="tabs.home">Home</span></a>
-    <a class="tab tab--active" href="bugun.html">👷<span data-i18n="tabs.worker">Ishchi</span></a>
-    <a class="tab" href="firms.html">🏬<span data-i18n="tabs.firms">Firmalar</span></a>
-  </footer>
-
-  <script src="app.js"></script>
+<script>
+  // Sana maydonini ertangi kunga qo'yamiz
+  const d=new Date(); d.setDate(d.getDate()+1);
+  document.getElementById('date').value = d.toISOString().slice(0,10);
+  function submitTomorrow(){
+    alert('Rahmat! Ertangi kun uchun buyurtmangiz qabul qilindi. (Demo.)');
+  }
+</script>
 </body>
   </html>
